Fixed visual issue regarding vertical alignment strategy of display area

--- a/src/list.css
+++ b/src/list.css
@@ -41,6 +41,7 @@ form {
   flex-grow: 1;
   flex-flow: row wrap;
   gap: 0.2em;
+  align-content: flex-start;
 }
 #errorArea {
   background: pink;
